--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-    background-color: black;
-    color: #f70d0d;
+    background-color: rgb(237, 10, 10);
+    color: #ec0909;
     padding: 20px;
     text-align: center;
 }
@@ -62,4 +62,120 @@ button
     background-image: url('animatedbg.webp');
     background-size: cover;
     z-index: -1;
+}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
+
+
+body {
+  font-family:'Open Sans';
+  line-height:200%;
+  background:#d75f70;
+}
+
+.main {
+  width:800px;
+  margin:160px auto;
+  text-align:center;
+}
+
+h1
+{
+    color: #f3eeee;
+}
+h2
+{
+    color:#ef0404;
+}
+
+h3 {
+  color:#e30505;
+}
+
+h1 {
+  margin-bottom:30px;
+  font-size:44px;
+}
+
+h2 {
+  margin-bottom:20px;
+  font-size:32px;
+}
+
+h3 {
+  font-size:21px;
+}
+
+p {
+  font-size:18px;
+  color:#ffd5df;
+}
+
+.btn {
+  margin-top:30px;
+  padding:2.2% 5.5%;
+  display:inline-block;
+  -webkit-transition:all linear 0.15s;
+  transition:all linear 0.15s;
+  border-radius:3px;
+  background:#fff;
+  font-size:22px;
+  font-weight: bold;
+  text-decoration:none;
+  text-transform:uppercase;
+  color:#333;
+  
+  &:hover {
+    opacity:0.75;
+  }
+}
+
+
+.popup-wrap {
+  width:100%;
+  height:100%;
+  display:none;
+  position:absolute;
+  top:0px;
+  left:0px;
+  content:'';
+  background:rgba(227, 80, 80, 0.85);
+}
+
+.popup-box {
+  width:400px;
+  padding:70px;
+  transform:translate(-50%, -50%) scale(0.5);
+  position:absolute;
+  top:50%;
+  left:50%;
+  box-shadow:0px 2px 16px rgba(246, 72, 72, 0.5);
+  border-radius:3px;
+  background:#d10808;
+  text-align:center;
+  
+  h2 {
+    color:#f1e7e7;
+  }
+  
+  h3 {
+    color:#888;
+  }
+  
+  .close-btn {
+    width:35px;
+    height:35px;
+    display:inline-block;
+    position:absolute;
+    top:10px;
+    right:10px;
+    -webkit-transition:all ease 0.5s;
+    transition:all ease 0.5s;
+    border-radius:1000px;
+    background:#d75f70;
+    font-weight:bold;
+    text-decoration:none;
+    color:#fff;
+    line-height:190%;
+    
+  }
 }
